examples/kubernetes/ingress_and_lb/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: example
  template:
    metadata:
      labels:
        app: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              memory: "50Mi"
              cpu: "50m"
