examples/kubernetes/ingress_and_lb/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  type: ClusterIP
  selector:
    app: example
  ports:
    - port: 80
