examples/kubernetes/ingress_and_lb/svc_lb_existing_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: example-lb-existing-ip
spec:
  type: LoadBalancer
  loadBalancerIP: 52.136.218.159
  selector:
    app: example
  ports:
    - port: 80
