examples/kubernetes/ingress_and_lb/svc_lb_new_ip.yml
apiVersion: v1
kind: Service
metadata:
  name: example-lb
spec:
  type: LoadBalancer
  selector:
    app: example
  ports:
    - port: 80
