examples/kubernetes/ingress_and_lb/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-tieto.aks1.sikademo.com
      secretName: hello-tieto.aks1.sikademo.com-tls
  rules:
    - host: hello-tieto.ad-ing.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
